--- a/ci/python/pyproject.toml
+++ b/ci/python/pyproject.toml
@@ -14,15 +14,15 @@ dev = [
     "mypy~=1.15.0",
     "pyfakefs~=5.7.4",
     "pytest~=8.3.4",
+    "pytest-cov~=6.0.0",
     "pytest-mock~=3.14.0",
     "ruff~=0.9.2",
 ]
 verschilanalyse = [
     "openpyxl~=3.1.5",
     "types-openpyxl~=3.1.5",
-    "pandas~=2.2.3",
-    "pandas-stubs~=2.2.3",
     "minio~=7.2.15",
+    "junit-xml~=1.9",
 ]
 all = ["ci-tools[verschilanalyse,dev]"]
 
@@ -93,6 +93,10 @@ warn_unused_configs = true
 warn_return_any = true
 pretty = true
 show_error_context = true
+
+[[tool.mypy.overrides]]
+module = ["junit_xml.*"]
+follow_untyped_imports = true
 
 [tool.pytest.ini_options]
 testpaths = [
