Remove link to unused gtest_main

--- a/src/third_party_open/f90tw/f90tw-main/f90tw/CMakeLists.txt
+++ b/src/third_party_open/f90tw/f90tw-main/f90tw/CMakeLists.txt
@@ -202,7 +202,7 @@ F90TWFPP("${file2fpp}" "${file2}"
 add_library(f90tw_gtest STATIC gtest_assertions.cpp)
 set_property(TARGET f90tw_gtest PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_include_directories(f90tw_gtest PUBLIC ${gtest_INCLUDE_DIR})
-target_link_libraries(f90tw_gtest PUBLIC f90twi_gtest gtest_main)
+target_link_libraries(f90tw_gtest PUBLIC f90twi_gtest gtest)
 
 # make available the include and module paths
 set(f90tw_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "f90tw include directory")
