--- a/ci/python/pyproject.toml
+++ b/ci/python/pyproject.toml
@@ -117,8 +117,8 @@ pretty = true
 show_error_context = true
 
 [[tool.mypy.overrides]]
-module = ["junit_xml.*", "s3_path_wrangler.*"]
-follow_untyped_imports = true
+module = ["junit_xml.*", "s3_path_wrangler.*", "minio.*"]
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 addopts = """\
