--- a/ci/python/pyproject.toml
+++ b/ci/python/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "mypy>=1.15.0",
+    "mypy==1.15.0",
     "pyfakefs>=5.7.4",
     "pytest>=8.4.0",
     "pytest-cov>=6.2.0",
