Update dry_run_prefix format in teamcity_settings.json

--- a/ci/python/ci_tools/dimrset_delivery/settings/teamcity_settings.json
+++ b/ci/python/ci_tools/dimrset_delivery/settings/teamcity_settings.json
@@ -30,5 +30,5 @@
     "sheet_name": "Sheet1",
     "name_column": "C",
     "relative_path_to_output_folder": "output/",
-    "dry_run_prefix": "DRY-RUN: "
+    "dry_run_prefix": "(dryrun) "
 }
