--- a/src/cmake/CMakeLists.txt
+++ b/src/cmake/CMakeLists.txt
@@ -207,6 +207,7 @@ set(fbc_configuration "FBC")
 # Combined (multi-component) configurations for running specific testbenches
 # These are equivalent to our branch-prefixes
 set(testbench-all_configuration "ALL-TESTBENCH")
+set(testbench-none_configuration "NONE-TESTBENCH")
 set(testbench-fm_configuration "FM-TESTBENCH")
 set(testbench-d3d4_configuration "D3D4-TESTBENCH")
 set(testbench-rr_configuration "RR-TESTBENCH")
@@ -236,8 +237,9 @@ if(NOT (${configuration_type} STREQUAL ${dflowfm_configuration}
      OR ${configuration_type} STREQUAL ${fbc_configuration}
      OR ${configuration_type} STREQUAL ${fm-suite_configuration}
      OR ${configuration_type} STREQUAL ${d3d4-suite_configuration}
-     OR ${configuration_type} STREQUAL ${testbench-all_configuration}
      OR ${configuration_type} STREQUAL ${all_configuration}
+     OR ${configuration_type} STREQUAL ${testbench-all_configuration}
+     OR ${configuration_type} STREQUAL ${testbench-none_configuration}
      OR ${configuration_type} STREQUAL ${testbench-fm_configuration}
      OR ${configuration_type} STREQUAL ${testbench-d3d4_configuration}
      OR ${configuration_type} STREQUAL ${testbench-rr_configuration}
@@ -332,6 +334,12 @@ if(${configuration_type} STREQUAL ${testbench-all_configuration} OR ${configurat
     include(configurations/testbench/all_configuration.cmake)
 endif()
 
+# NONE configuration
+if(${configuration_type} STREQUAL ${testbench-none_configuration})
+    message(STATUS "Generating solution for none testbenches ...")
+    include(configurations/testbench/waq_configuration.cmake)
+endif()
+
 # D3D4 configuration
 if(${configuration_type} STREQUAL ${testbench-d3d4_configuration})
     message(STATUS "Generating solution for d3d4 testbench ...")
@@ -371,7 +379,7 @@ endif()
 # QUICKPLOT configuration
 if(${configuration_type} STREQUAL ${testbench-qp_configuration})
     message(STATUS "Generating solution for QUICKPLOT testbench ...")
-    include(configurations/testbench/qp_configuration.cmake)
+    include(configurations/testbench/waq_configuration.cmake)
 endif()
 
 ### Composed configurations for releases
