--- a/src/tools_gpl/dfm_volume_tool/packages/dfm_volume_tool/CMakeLists.txt
+++ b/src/tools_gpl/dfm_volume_tool/packages/dfm_volume_tool/CMakeLists.txt
@@ -56,7 +56,7 @@ if(UNIX)
    set_property(TARGET ${executable_name} PROPERTY LINKER_LANGUAGE Fortran)
 
    include_directories(${version_include_dir}
-					   ${res_path})
+                       ${res_path})
 endif(UNIX)
 
 if (WIN32)
@@ -70,9 +70,9 @@ set_source_files_properties(${CMAKE_CURRENT_SOURCE_DIR}/${src_path}/dfm_volume_t
                             PROPERTIES COMPILE_OPTIONS "${file_preprocessor_flag}")
 
 if (WIN32)
-    include_directories(${tecplot_path}
-						${version_include_dir}
-						${res_path})
+    include_directories(${version_include_dir}
+                        ${res_path}
+    )
 
 
     # Set linker properties
@@ -82,7 +82,7 @@ if (WIN32)
                             "${mpi_library_path}"
                             "${checkout_src_root}/third_party_open/netcdf/${netcdf_version}/lib"
                             "${checkout_src_root}/third_party_open/pthreads/bin/x64"
-                            "${checkout_src_root}/third_party_open/Tecplot/lib/x64")
+    )
 
     target_link_libraries(${executable_name} PRIVATE
                           "comctl32.lib"
@@ -96,7 +96,7 @@ if (WIN32)
                           "netcdf.lib"
                           "pthreadVC2.lib"
                           "${mpi_fortran_library}"
-                          "tecio.lib")
+    )
 
     message(STATUS "Setting target_compile_definitions in windows")
     target_compile_definitions(${executable_name} PRIVATE "WIN32")
