--- a/src/tools_gpl/dfmoutput/CMakeLists.txt
+++ b/src/tools_gpl/dfmoutput/CMakeLists.txt
@@ -49,7 +49,7 @@ if(UNIX)
    set_property(TARGET ${executable_name} PROPERTY LINKER_LANGUAGE Fortran)
 
       include_directories(${version_include_dir}
-					      ${res_path})
+                          ${res_path})
 endif(UNIX)
 
 if (WIN32)
@@ -62,9 +62,9 @@ set_source_files_properties(${fortran_version_file}
 #target_link_libraries(${executable_name} PRIVATE netcdf)
 
 if (WIN32)
-    include_directories(${tecplot_path}
-						${version_include_dir}
-					    ${res_path})
+    include_directories(${version_include_dir}
+                        ${res_path}
+    )
 
     # Set linker properties
     message(STATUS "Setting linker properties in windows")
@@ -73,7 +73,7 @@ if (WIN32)
                             "${mpi_library_path}"
                             "${checkout_src_root}/third_party_open/netcdf/${netcdf_version}/lib"
                             "${checkout_src_root}/third_party_open/pthreads/bin/x64"
-                            "${checkout_src_root}/third_party_open/Tecplot/lib/x64")
+    )
 
     target_link_libraries(${executable_name} PRIVATE
                           "comctl32.lib"
@@ -87,7 +87,7 @@ if (WIN32)
                           "netcdf.lib"
                           "pthreadVC2.lib"
                           "${mpi_fortran_library}"
-                          "tecio.lib")
+    )
 
     message(STATUS "Setting target_compile_definitions in windows")
     target_compile_definitions(${executable_name} PRIVATE "WIN32")
