Fix relative path to wiki template in TeamCity settings

--- a/ci/python/ci_tools/dimrset_delivery/settings/teamcity_settings.json
+++ b/ci/python/ci_tools/dimrset_delivery/settings/teamcity_settings.json
@@ -20,10 +20,10 @@
     "dimr_patch_page_prefix": "DIMRset release",
     "dimr_subpage_prefix": "Testbank results",
     "dimr_subpage_suffix": " release",
-    "relative_path_to_wiki_template": "..\\..\\templates\\main.html",
     "network_base_path": "p:\\d-hydro\\dimrset\\weekly\\",
     "linux_address": "h7",
     "delft3d_git_repo": "https://github.com/Deltares/Delft3D.git",
+    "relative_path_to_wiki_template": "templates/main.html",
     "relative_path_to_email_template": "templates/weekly_email.html",
     "lower_bound_percentage_successful_tests": 100,
     "versions_excel_filename": "versions_overview.xlsx",
