Fix duplicate scanning on windows (capital letter and lower case letters matched .F90 .f90). Also fix waq dp use properly

--- a/src/engines_gpl/dflowfm/packages/dflowfm_kernel/CMakeLists.txt
+++ b/src/engines_gpl/dflowfm/packages/dflowfm_kernel/CMakeLists.txt
@@ -253,6 +253,7 @@ if (WIN32)
     endif()
 
     add_warnings_as_errors_post_build_windows(${library_name})
+    check_style_double_precision(${library_name})
 endif(WIN32)
 
 if (UNIX)
