Link precice to fm, add call that gives precice error about missing precice config

--- a/.devcontainer/delft3d/Dockerfile
+++ b/.devcontainer/delft3d/Dockerfile
@@ -1,4 +1,4 @@
-FROM localhost/third-party-libs:precice_poc AS base
+FROM containers.deltares.nl/delft3d-dev/delft3d-third-party-libs:oneapi-2024-ifx-precice-poc AS base
 
 ARG USERNAME=dev
 ARG USER_UID=1000
