--- a/src/cmake/CMakeLists.txt
+++ b/src/cmake/CMakeLists.txt
@@ -206,6 +206,7 @@ set(tools_gpl_configuration "TOOLS_GPL")
 set(drr_configuration "DRR")
 set(rtc_configuration "RTC")
 set(fbc_configuration "FBC")
+set(dsle_configuration "DSLE")
 
 # Combined (multi-component) configurations for running specific testbenches
 # These are equivalent to our branch-prefixes
@@ -238,6 +239,7 @@ if(NOT (${configuration_type} STREQUAL ${dflowfm_configuration}
      OR ${configuration_type} STREQUAL ${drr_configuration}
      OR ${configuration_type} STREQUAL ${rtc_configuration}
      OR ${configuration_type} STREQUAL ${fbc_configuration}
+     OR ${configuration_type} STREQUAL ${dsle_configuration}
      OR ${configuration_type} STREQUAL ${fm-suite_configuration}
      OR ${configuration_type} STREQUAL ${d3d4-suite_configuration}
      OR ${configuration_type} STREQUAL ${all_configuration}
@@ -327,6 +329,11 @@ endif()
 if(${configuration_type} STREQUAL ${fbc_configuration})
     message(STATUS "Generating solution for FBC-tools ...")
     include(configurations/components/fbc_configuration.cmake)
+endif()
+
+if(${configuration_type} STREQUAL ${dsle_configuration})
+    message(STATUS "Generating solution for D-SLE ...")
+    include(configurations/components/dsle_configuration.cmake)
 endif()
 
 ### Composed configurations for testbenches
