Add new cmake option to turn on fm-wave coupling through precice

--- a/src/engines_gpl/dflowfm/packages/dflowfm_lib/CMakeLists.txt
+++ b/src/engines_gpl/dflowfm/packages/dflowfm_lib/CMakeLists.txt
@@ -39,9 +39,13 @@ target_link_libraries(${library_name} PRIVATE
                       precice_module
 )
 
-option(IS_FM_WITH_GREETER "Compile FM with preCICE greeter_dummy coupling" OFF)
-if(IS_FM_WITH_GREETER)
-    target_compile_definitions(${library_name} PRIVATE IS_FM_WITH_GREETER)
+option(HAS_PRECICE_FM_GREETER_COUPLING "Compile FM with preCICE greeter_dummy coupling" OFF)
+if(HAS_PRECICE_FM_GREETER_COUPLING)
+    target_compile_definitions(${library_name} PRIVATE HAS_PRECICE_FM_GREETER_COUPLING)
+endif()
+
+if(HAS_PRECICE_FM_WAVE_COUPLING)
+    target_compile_definitions(${library_name} PRIVATE HAS_PRECICE_FM_WAVE_COUPLING)
 endif()
 
 if(UNIX)
@@ -86,7 +90,7 @@ if (WIN32)
 endif(WIN32)
 
 # Change the name of the target library to dflowfm.dll
-set_target_properties (${library_name} PROPERTIES OUTPUT_NAME  dflowfm)
+set_target_properties (${library_name} PROPERTIES OUTPUT_NAME dflowfm)
 
 # Create the folder structure in vfproj
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${source} ${includes})
