--- a/src/engines_gpl/wave/packages/manager/CMakeLists.txt
+++ b/src/engines_gpl/wave/packages/manager/CMakeLists.txt
@@ -20,9 +20,13 @@ set(oss_dependencies wave_data
                      wave_kernel
 )
 
-option(IS_WAVE_WITH_GREETER "Compile wave with preCICE greeter_dummy coupling" OFF)
-if(IS_WAVE_WITH_GREETER)
-    target_compile_definitions(${library_name} PRIVATE IS_WAVE_WITH_GREETER)
+option(HAS_PRECICE_WAVE_GREETER_COUPLING "Compile wave with preCICE greeter_dummy coupling" OFF)
+if(HAS_PRECICE_WAVE_GREETER_COUPLING)
+    target_compile_definitions(${library_name} PRIVATE HAS_PRECICE_WAVE_GREETER_COUPLING)
+endif()
+
+if(HAS_PRECICE_FM_WAVE_COUPLING)
+    target_compile_definitions(${library_name} PRIVATE HAS_PRECICE_FM_WAVE_COUPLING)
 endif()
 
 target_link_libraries(${library_name} PRIVATE ${oss_dependencies} precice_module)
