Clean up cmake, move precice creation calls to CLI versions of FM and WAVE

--- a/src/engines_gpl/dflowfm/packages/dflowfm_kernel/CMakeLists.txt
+++ b/src/engines_gpl/dflowfm/packages/dflowfm_kernel/CMakeLists.txt
@@ -160,13 +160,16 @@ target_link_libraries(${library_name} PRIVATE
 )
 
 #add preCICE
+if(HAS_PRECICE_FM_WAVE_COUPLING)
+    target_compile_definitions(${library_name} PRIVATE HAS_PRECICE_FM_WAVE_COUPLING)
+endif()
+
 if(HAS_PRECICE_FM_GREETER_COUPLING)
-    find_package(PkgConfig REQUIRED)
-    pkg_check_modules(precice REQUIRED IMPORTED_TARGET libprecice)
-    
     target_compile_definitions(${library_name} PRIVATE HAS_PRECICE_FM_GREETER_COUPLING)
-    target_include_directories(${library_name} PRIVATE precice_module)
-    target_link_libraries(${library_name} PRIVATE PkgConfig::precice)
+endif()
+
+if(HAS_PRECICE_FM_WAVE_COUPLING OR HAS_PRECICE_FM_GREETER_COUPLING)
+    target_link_libraries(${library_name} PRIVATE precice_fortran)
 endif()
 
 # Add dependencies
