--- a/src/third_party_open/precice/CMakeLists.txt
+++ b/src/third_party_open/precice/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_library(precice_module precice.F90)
+add_library(precice_fortran precice.F90)
 
 if(UNIX)
     find_package(PkgConfig REQUIRED)
     pkg_check_modules(precice REQUIRED IMPORTED_TARGET libprecice)
-    target_link_libraries(precice_module PRIVATE PkgConfig::precice)
+    target_link_libraries(precice_fortran PRIVATE PkgConfig::precice)
 endif(UNIX)
