Add DVC to testbench.py requirements and to the dev container as tool

--- a/.devcontainer/delft3d/Dockerfile
+++ b/.devcontainer/delft3d/Dockerfile
@@ -41,6 +41,7 @@ RUN <<"EOF"
 uv python install 3.12
 uv tool install fortls
 uv tool install fprettify
+uv tool install "dvc[s3]"
 EOF
 
 # Install git prompt and completion scripts.
