--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ __pycache__
 .mypy_cache
 .pytest_cache
 
+# DVC environment and caches
+.dvc/config.local
+.dvc/tmp
+.dvc/cache
 
 # files extensions to exclude
 *.i90
