make python 3.11 the default

--- a/.devcontainer/delft3d/Dockerfile
+++ b/.devcontainer/delft3d/Dockerfile
@@ -14,6 +14,25 @@ EOF
 
 ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk
 
+# Install Python 3.11.9 from source
+RUN <<"EOF"
+cd /tmp
+curl -O https://www.python.org/ftp/python/3.11.9/Python-3.11.9.tgz
+tar -xzf Python-3.11.9.tgz
+cd Python-3.11.9
+./configure --enable-optimizations --with-ensurepip=install
+make -j$(nproc)
+sudo make altinstall
+# Clean up
+cd /
+rm -rf /tmp/Python-3.11.9*
+# Create symlinks for system-wide access
+sudo ln -sf /usr/local/bin/python3.11 /usr/local/bin/python3
+sudo ln -sf /usr/local/bin/python3.11 /usr/local/bin/python
+sudo ln -sf /usr/local/bin/pip3.11 /usr/local/bin/pip3
+sudo ln -sf /usr/local/bin/pip3.11 /usr/local/bin/pip
+EOF
+
 # Create non-root user and grant it sudo privileges:
 # See: https://code.visualstudio.com/remote/advancedcontainers/add-nonroot-user
 RUN <<"EOF"
@@ -33,15 +52,10 @@ touch ~/.history/.bash_history
 EOF
 
 
-# Install uv, python, and python tools.
-RUN curl -LsSf https://astral.sh/uv/0.8.4/install.sh | sh
-ENV PATH=/home/dev/.local/bin:$PATH \
-    UV_LINK_MODE=copy
+# Install Python tools using pip
+ENV PATH=/usr/local/bin:/home/dev/.local/bin:$PATH
 RUN <<"EOF"
-uv python install 3.11.9
-uv tool install fortls
-uv tool install fprettify
-uv tool install "dvc[s3]"
+python3.11 -m pip install --user fortls fprettify "dvc[s3]"
 EOF
 
 # Install git prompt and completion scripts.
@@ -72,7 +86,6 @@ source /home/dev/.local/bin/git-prompt.sh
 
 # Aliases
 alias ls='ls --color=auto'
-alias python='python3'
 
 # Set bash prompt.
 export PS1='[\u@\h \w\$(__git_ps1 " (%s)")]\n\\$ '
