fixed cmake (and other things too) to fix cmake.

--- a/src/third_party_open/f90tw/f90tw-main/CMakeLists.txt
+++ b/src/third_party_open/f90tw/f90tw-main/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # f90 line length; TODO handle compilers other than GNU
 set(CMAKE_Fortran_FORMAT FREE)
 if(CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
-    set(CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS} "-ffree-line-length-none")
+#    set(CMAKE_Fortran_FLAGS ${CMAKE_Fortran_FLAGS} "-ffree-line-length-none")
+     set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-0")
 endif()
 
 add_subdirectory(f90tw)
