maye a few more cmake, etc. mods so we can compile this, but hanging up on a GLIBC@@2.5.1 error with DWAVES

--- a/src/utils_lgpl/esmfsm/packages/esmfsm_c/CMakeLists.txt
+++ b/src/utils_lgpl/esmfsm/packages/esmfsm_c/CMakeLists.txt
@@ -45,3 +45,8 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${esm_files}
                                                     ${fsm_files}
                                                     ${header_files})
 set_target_properties (${library_name} PROPERTIES FOLDER utils_lgpl/esmfsm)
+
+# yoder:
+find_package(OpenMP REQUIRED)
+
+
